[package]
name = "ansi-parser"
description = "A library using nom for parsing ANSI Escape Codes"
homepage = "https://gitlab.com/DavidBittner/ansi-parser"
authors = ["David Bittner <bittneradave@gmail.com>"]

version = "0.6.5"
license = "MPL-2.0"

edition = "2018"

[dependencies]
nom = "4.2.3"
heapless = "0.5.6"

[features]
std = []
default = ["std"]
