[package]
name = "ansi-parser"
description = "A library using nom for parsing ANSI Escape Codes"
homepage = "https://gitlab.com/DavidBittner/ansi-parser"
authors = ["David Bittner <bittneradave@gmail.com>"]

version = "0.7.0"
license = "MPL-2.0"

edition = "2018"

[dependencies]
heapless = "0.5.6"

[dependencies.nom]
version = "4.2.3"
default-features = false

[features]
std = ["nom/std"]
default = ["std"]
